feat: 批量上传 + CORS配置化 + 部署文档 + 190测试全通过
- 新增 POST /resumes/batch-upload 批量上传（最多20个，限流5次/分钟）
- 新增 BatchUploadResponse DTO + ResultCode 20006/20007
- CORS 域名可配置（smartats.cors.allowed-origins），prod 读 CORS_ALLOWED_ORIGINS 环境变量
- MinIO 集成测试添加 @Tag("integration") + @DisabledIfEnvironmentVariable(CI)
- 新增 docs/deployment-guide.md 生产部署指南（Docker Compose、Nginx、备份策略）
- 新增 RedisKeyConstants.UPLOAD_RATE_LIMIT_KEY_PREFIX
- 新增 6 个测试用例（batch upload service×4 + controller×2），共 190 测试全通过
- 更新 .env.example（CORS、Milvus、Embedding 配置）
- 更新 CLAUDE.md（40 endpoints, 190 tests, all TODOs resolved）